--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,12 @@
 form {
     display: flex;
     flex-direction: column;
-    border: black solid 2px;
+    border: black solid .2rem;
     color: black;
-    padding: 2rem;
-    background-color: lightgray;
+    padding: 1.5rem;
+    background-color: rgb(238, 228, 228);
+    margin-top: 4rem;
+    box-shadow: .5rem .3rem .3rem gray;
 }
 
 form label {
@@ -31,7 +33,6 @@ input[type=text] {
 }
 
 .pageheader {
-    border: blue dotted 2px;
     text-align: center;
 }
 
